telefoonnummer ouders ipv ouds/verzorgers

--- a/usbweb/apache2/conf/httpd.conf
+++ b/usbweb/apache2/conf/httpd.conf
@@ -41,7 +41,7 @@
 # at a local disk.  If you wish to share the same ServerRoot for multiple
 # httpd daemons, you will need to change at least LockFile and PidFile.
 #
-ServerRoot "C:/Users/Thijs van Dam/Documents/PHPStorm Projects/FlevoDeltaKampeerWeekend Website/Website_KampeerWeekend/usbweb/apache2"
+ServerRoot "C:/Users/rickert/Documents/GitHub/Website_KampeerWeekend/usbweb/apache2"
 
 #
 # Listen: Allows you to bind Apache to specific IP addresses and/or
@@ -383,7 +383,7 @@ LogLevel warn
 </IfModule>
 
 #
-# "C:/Users/Thijs van Dam/Documents/PHPStorm Projects/FlevoDeltaKampeerWeekend Website/Website_KampeerWeekend/usbweb/cgi-bin" should be changed to whatever your ScriptAliased
+# "C:/Users/rickert/Documents/GitHub/Website_KampeerWeekend/usbweb/cgi-bin" should be changed to whatever your ScriptAliased
 # CGI directory exists, if you have that configured.
 #
 #<Directory "../..//cgi-bin">
@@ -530,17 +530,17 @@ SSLRandomSeed connect builtin
 </IfModule>
 
 # For PHP 5 do something like this:
-LoadModule php5_module "C:/Users/Thijs van Dam/Documents/PHPStorm Projects/FlevoDeltaKampeerWeekend Website/Website_KampeerWeekend/usbweb/php/php5apache2_4.dll"
+LoadModule php5_module "C:/Users/rickert/Documents/GitHub/Website_KampeerWeekend/usbweb/php/php5apache2_4.dll"
 AddType application/x-httpd-php .php
 AddType application/x-httpd-php-source .phps
 # configure the path to php.ini
-PHPIniDir "C:/Users/Thijs van Dam/Documents/PHPStorm Projects/FlevoDeltaKampeerWeekend Website/Website_KampeerWeekend/usbweb/php"
+PHPIniDir "C:/Users/rickert/Documents/GitHub/Website_KampeerWeekend/usbweb/php"
 
 
 ### PHPMYADMIN ###
-Alias /phpmyadmin "C:/Users/Thijs van Dam/Documents/PHPStorm Projects/FlevoDeltaKampeerWeekend Website/Website_KampeerWeekend/usbweb/phpmyadmin/"
+Alias /phpmyadmin "C:/Users/rickert/Documents/GitHub/Website_KampeerWeekend/usbweb/phpmyadmin/"
 
-<Directory "C:/Users/Thijs van Dam/Documents/PHPStorm Projects/FlevoDeltaKampeerWeekend Website/Website_KampeerWeekend/usbweb/phpmyadmin/">
+<Directory "C:/Users/rickert/Documents/GitHub/Website_KampeerWeekend/usbweb/phpmyadmin/">
     AllowOverride All
     Order allow,deny
     Allow from all
