--- a/usbweb/mysql/my.ini
+++ b/usbweb/mysql/my.ini
@@ -38,9 +38,9 @@ socket		= /tmp/mysql.sock
 port		= 3307
 
 
-innodb_data_home_dir = C:/Users/Thijs van Dam/Documents/PHPStorm Projects/FlevoDeltaKampeerWeekend Website/Website_KampeerWeekend/usbweb\mysql\data\
+innodb_data_home_dir = C:/Users/rickert/Documents/GitHub/Website_KampeerWeekend/usbweb\mysql\data\
 innodb_data_file_path = ibdata1:10M:autoextend
-innodb_log_group_home_dir = C:/Users/Thijs van Dam/Documents/PHPStorm Projects/FlevoDeltaKampeerWeekend Website/Website_KampeerWeekend/usbweb\mysql\data\
+innodb_log_group_home_dir = C:/Users/rickert/Documents/GitHub/Website_KampeerWeekend/usbweb\mysql\data\
 
 # You can set .._buffer_pool_size up to 50 - 80 %
 # of RAM but beware of setting memory usage too high
