--- a/usbweb/php/php.ini
+++ b/usbweb/php/php.ini
@@ -731,7 +731,7 @@ user_dir =
 ; http://php.net/extension-dir
 ; extension_dir = "./"
 ; On windows:
-extension_dir = "C:/Users/Thijs van Dam/Documents/PHPStorm Projects/FlevoDeltaKampeerWeekend Website/Website_KampeerWeekend/usbweb\php\ext\"
+extension_dir = "C:/Users/rickert/Documents/GitHub/Website_KampeerWeekend/usbweb\php\ext\"
 
 ; Whether or not to enable the dl() function.  The dl() function does NOT work
 ; properly in multithreaded servers, such as IIS or Zeus, and is automatically
